src/objects/z_FieldDescription__c.object
<CustomObject>
    <description>Created by the Metadata API</description>
    <fields>
        <fullName>P7S1_InlineHelptextLen__c</fullName>
        <description>Länge des Inlinehelp-Texts. (original Länge vor Kürzung auf 255 Zeichen)</description>
        <inlineHelpText>Länge des Inlinehelp-Texts. (original Länge vor Kürzung auf 255 Zeichen)</inlineHelpText>
        <label>inlineHelptext Länge</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>P7S1_PicklistentriesSize__c</fullName>
        <description>Länge der Picklisteinträge</description>
        <inlineHelpText>Länge der Picklisteinträge</inlineHelpText>
        <label>picklistentries-size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>byteLength__c</fullName>
        <label>byteLength</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>calculatedFormula__c</fullName>
        <label>calculatedFormula</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>defaultValueFormula__c</fullName>
        <label>defaultValueFormula</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>digits__c</fullName>
        <label>digits</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inlineHelpText__c</fullName>
        <label>inlineHelpText</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isAccessible__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isAccessible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isAutoNumer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isAutoNumer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isCalculated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isCalculated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isCaseSensitive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isCaseSensitive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isCreateable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isCreateable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isCustom__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isCustom</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isDefaultedOnCreate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isDefaultedOnCreate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isDependentPicklist__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isDependentPicklist</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isDeprecatedAndHidden__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isDeprecatedAndHidden</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isExternalID__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isExternalID</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isFilterable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isFilterable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isGroupable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isGroupable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isHtmlFormatted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isHtmlFormatted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isIdLookup__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isIdLookup</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isNameField__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isNameField</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isNamePointing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isNamePointing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isNillable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isNillable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isRestrictedPicklist__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isRestrictedPicklist</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isSortable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isSortable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isUnique__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isUnique</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isUpdateable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isUpdateable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isWriteRequiredMasterRead__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isWriteRequiredMasterRead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>label__c</fullName>
        <label>label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>length__c</fullName>
        <label>length</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>localName__c</fullName>
        <label>localName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>name__c</fullName>
        <label>name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>picklistentries__c</fullName>
        <label>picklistentries</label>
        <length>130000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>precision__c</fullName>
        <label>precision</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>relationshipName__c</fullName>
        <label>relationshipName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>relationshipOrder__c</fullName>
        <label>relationshipOrder</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>scale__c</fullName>
        <label>scale</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>soaptype__c</fullName>
        <label>soptype</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>type__c</fullName>
        <label>type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>z_SObjectDescription__c</fullName>
        <label>Object</label>
        <referenceTo>z_SObjectDescription__c</referenceTo>
        <relationshipLabel>Field</relationshipLabel>
        <relationshipName>z_FieldDescription</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Field</label>
    <listViews>
        <fullName>Advendio</fullName>
        <columns>z_SObjectDescription__c</columns>
        <columns>NAME</columns>
        <columns>name__c</columns>
        <columns>type__c</columns>
        <columns>inlineHelpText__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>startsWith</operation>
            <value>Advendio__</value>
        </filters>
        <label>Advendio</label>
        <language>de</language>
    </listViews>
    <listViews>
        <fullName>Advendio_ohne_Hilfe</fullName>
        <columns>z_SObjectDescription__c</columns>
        <columns>NAME</columns>
        <columns>name__c</columns>
        <columns>type__c</columns>
        <columns>inlineHelpText__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>startsWith</operation>
            <value>Advendio__</value>
        </filters>
        <filters>
            <field>inlineHelpText__c</field>
            <operation>equals</operation>
        </filters>
        <label>Advendio ohne Hilfe</label>
        <language>de</language>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>z_SObjectDescription__c</columns>
        <columns>NAME</columns>
        <columns>name__c</columns>
        <columns>isAccessible__c</columns>
        <columns>type__c</columns>
        <columns>inlineHelpText__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>Alle</label>
        <language>de</language>
    </listViews>
    <listViews>
        <fullName>Contact</fullName>
        <columns>label__c</columns>
        <columns>NAME</columns>
        <columns>isAccessible__c</columns>
        <columns>type__c</columns>
        <columns>length__c</columns>
        <columns>isCalculated__c</columns>
        <columns>isUpdateable__c</columns>
        <columns>inlineHelpText__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>z_SObjectDescription__c</field>
            <operation>equals</operation>
            <value>Contact</value>
        </filters>
        <label>Contact</label>
        <language>de</language>
    </listViews>
    <listViews>
        <fullName>Datumfelder</fullName>
        <columns>z_SObjectDescription__c</columns>
        <columns>label__c</columns>
        <columns>NAME</columns>
        <columns>isAccessible__c</columns>
        <columns>type__c</columns>
        <columns>length__c</columns>
        <columns>inlineHelpText__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>z_SObjectDescription__c</field>
            <operation>equals</operation>
            <value>Account,Contact,Opportunity</value>
        </filters>
        <filters>
            <field>isCreateable__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>type__c</field>
            <operation>equals</operation>
            <value>DATE,DATETIME,TIME</value>
        </filters>
        <label>Datumfelder</label>
        <language>de</language>
    </listViews>
    <listViews>
        <fullName>Lead</fullName>
        <columns>label__c</columns>
        <columns>NAME</columns>
        <columns>type__c</columns>
        <columns>length__c</columns>
        <columns>inlineHelpText__c</columns>
        <columns>isCreateable__c</columns>
        <columns>isCustom__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>z_SObjectDescription__c</field>
            <operation>equals</operation>
            <value>Lead</value>
        </filters>
        <label>Lead</label>
        <language>de</language>
    </listViews>
    <listViews>
        <fullName>Not_Accessible</fullName>
        <columns>z_SObjectDescription__c</columns>
        <columns>NAME</columns>
        <columns>name__c</columns>
        <columns>label__c</columns>
        <columns>isCreateable__c</columns>
        <columns>isUpdateable__c</columns>
        <columns>type__c</columns>
        <columns>isCalculated__c</columns>
        <columns>calculatedFormula__c</columns>
        <columns>isIdLookup__c</columns>
        <columns>inlineHelpText__c</columns>
        <columns>relationshipName__c</columns>
        <columns>relationshipOrder__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>isAccessible__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Not Accessible</label>
        <language>de</language>
    </listViews>
    <listViews>
        <fullName>Not_Writeable</fullName>
        <columns>z_SObjectDescription__c</columns>
        <columns>NAME</columns>
        <columns>name__c</columns>
        <columns>label__c</columns>
        <columns>isCreateable__c</columns>
        <columns>isUpdateable__c</columns>
        <columns>type__c</columns>
        <columns>isCalculated__c</columns>
        <columns>calculatedFormula__c</columns>
        <columns>isIdLookup__c</columns>
        <columns>inlineHelpText__c</columns>
        <columns>relationshipName__c</columns>
        <columns>relationshipOrder__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>isCalculated__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>isCreateable__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>isCustom__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>isAccessible__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Not Writeable</label>
        <language>de</language>
    </listViews>
    <listViews>
        <fullName>Opportunity</fullName>
        <columns>label__c</columns>
        <columns>NAME</columns>
        <columns>isAccessible__c</columns>
        <columns>type__c</columns>
        <columns>length__c</columns>
        <columns>inlineHelpText__c</columns>
        <columns>isDeprecatedAndHidden__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>z_SObjectDescription__c</field>
            <operation>equals</operation>
            <value>Opportunity</value>
        </filters>
        <label>Opportunity</label>
        <language>de</language>
    </listViews>
    <listViews>
        <fullName>OwnerId</fullName>
        <columns>label__c</columns>
        <columns>NAME</columns>
        <columns>isAccessible__c</columns>
        <columns>type__c</columns>
        <columns>length__c</columns>
        <columns>inlineHelpText__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>startsWith</operation>
            <value>Own</value>
        </filters>
        <filters>
            <field>z_SObjectDescription__c</field>
            <operation>equals</operation>
            <value>Task</value>
        </filters>
        <label>OwnerId</label>
        <language>de</language>
    </listViews>
    <listViews>
        <fullName>SomTv</fullName>
        <columns>z_SObjectDescription__c</columns>
        <columns>NAME</columns>
        <columns>name__c</columns>
        <columns>type__c</columns>
        <columns>inlineHelpText__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>startsWith</operation>
            <value>SomTv_</value>
        </filters>
        <label>SomTv</label>
        <language>de</language>
    </listViews>
    <listViews>
        <fullName>User</fullName>
        <columns>label__c</columns>
        <columns>NAME</columns>
        <columns>isAccessible__c</columns>
        <columns>type__c</columns>
        <columns>length__c</columns>
        <columns>inlineHelpText__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>z_SObjectDescription__c</field>
            <operation>equals</operation>
            <value>User</value>
        </filters>
        <label>User</label>
        <language>de</language>
    </listViews>
    <listViews>
        <fullName>Zahlfelder</fullName>
        <columns>z_SObjectDescription__c</columns>
        <columns>label__c</columns>
        <columns>NAME</columns>
        <columns>isAccessible__c</columns>
        <columns>type__c</columns>
        <columns>length__c</columns>
        <columns>inlineHelpText__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>z_SObjectDescription__c</field>
            <operation>equals</operation>
            <value>Account,Contact,Opportunity</value>
        </filters>
        <filters>
            <field>isCreateable__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>type__c</field>
            <operation>equals</operation>
            <value>CURRENCY,DOUBLE,INTEGER,PERCENT</value>
        </filters>
        <label>Zahlfelder</label>
        <language>de</language>
    </listViews>
    <listViews>
        <fullName>temp_old_etc</fullName>
        <booleanFilter>1 OR 2 OR 3 OR 4</booleanFilter>
        <columns>z_SObjectDescription__c</columns>
        <columns>NAME</columns>
        <columns>name__c</columns>
        <columns>label__c</columns>
        <columns>type__c</columns>
        <columns>length__c</columns>
        <columns>isCreateable__c</columns>
        <columns>isUpdateable__c</columns>
        <columns>isCalculated__c</columns>
        <columns>calculatedFormula__c</columns>
        <columns>isAccessible__c</columns>
        <columns>isIdLookup__c</columns>
        <columns>inlineHelpText__c</columns>
        <columns>relationshipName__c</columns>
        <columns>relationshipOrder__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>temp</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>old</value>
        </filters>
        <filters>
            <field>label__c</field>
            <operation>contains</operation>
            <value>temp</value>
        </filters>
        <filters>
            <field>label__c</field>
            <operation>contains</operation>
            <value>old</value>
        </filters>
        <label>temp old etc Felder</label>
        <language>de</language>
    </listViews>
    <nameField>
        <label>Field</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>